# deepal6

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  Untitled.ipynb  pyproject.toml  setup.py
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
deepal6/: __init__.py  config.py  exceptions.py  learner.py  metrics.py  plotting.py
deepal6/data/: __init__.py  base.py  image.py  tabular.py
deepal6/models/: __init__.py
deepal6/strategies/: __init__.py  query.py  registry.py
examples/: custom_strategy.py  image_chest_xray.py  tabular_credit_risk.py
tests/: test_tabular.py
