[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepal6"
version = "1.0.1"
description = "DeepAL6 — Deep Active Learning with initial 5 query strategies vs random baseline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Bob Philip Aila"}]
keywords = ["active learning", "deep learning", "machine learning", "uncertainty sampling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "torch>=1.12",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
image = ["torchvision>=0.13", "Pillow>=9.0"]
dev   = ["pytest>=7.0", "pytest-cov", "twine", "build"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepal6*"]
